refactor: standardize services, exceptions, and DTO handling
- Replaced RuntimeException with custom exceptions (ResourceNotFound, Unauthorized)
- Implemented GlobalExceptionHandler with proper status mapping
- Refactored all services to use AuthUtil for authentication
- Enforced DTO-only responses in controllers
- Cleaned and centralized mapping logic
- Improved file upload validation and safety
- Standardized entity structure with Lombok and lifecycle methods