@@ -1,17 +1,15 @@
 package com.estateflow.estateflowbackend.service;
 
-import com.estateflow.estateflowbackend.dto.RegisterRequestDTO;
-import com.estateflow.estateflowbackend.dto.RegisterResponseDTO;
-import com.estateflow.estateflowbackend.dto.UserRequestDTO;
-import com.estateflow.estateflowbackend.dto.UserResponseDTO;
+import com.estateflow.estateflowbackend.dto.*;
 import com.estateflow.estateflowbackend.entity.User;
+import com.estateflow.estateflowbackend.entity.UserRole;
+import com.estateflow.estateflowbackend.exception.ResourceNotFoundException;
 import com.estateflow.estateflowbackend.repository.UserRepository;
 import com.estateflow.estateflowbackend.security.JwtService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -21,7 +19,8 @@ public class UserService {
     private final JwtService jwtService;
 
     public UserService(UserRepository userRepository,
-                       BCryptPasswordEncoder passwordEncoder, JwtService jwtService) {
+                       BCryptPasswordEncoder passwordEncoder,
+                       JwtService jwtService) {
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
         this.jwtService = jwtService;
@@ -29,27 +28,21 @@ public class UserService {
 
     public RegisterResponseDTO registerUser(RegisterRequestDTO request) {
 
-        User user = new User();
+        validateEmailNotExists(request.getEmail());
 
-        user.setFullName(request.getFullName());
-        user.setEmail(request.getEmail());
-        user.setPassword(passwordEncoder.encode(request.getPassword()));
-        user.setRole(request.getRole());
+        User user = buildUser(
+                request.getFullName(),
+                request.getEmail(),
+                request.getPassword(),
+                request.getRole()
+        );
 
-        User savedUser = userRepository.save(user);
-
-        RegisterResponseDTO response = new RegisterResponseDTO();
-        response.setId(savedUser.getId());
-        response.setFullName(savedUser.getFullName());
-        response.setEmail(savedUser.getEmail());
-        response.setRole(savedUser.getRole().name());
-
-        return response;
+        return mapToRegisterResponse(userRepository.save(user));
     }
 
     public String login(String email, String password) {
 
-        User user = userRepository.findByEmail(email)
+        User user = userRepository.findByEmail(email.trim().toLowerCase())
                 .orElseThrow(() -> new RuntimeException("Invalid credentials"));
 
         if (!passwordEncoder.matches(password, user.getPassword())) {
@@ -61,29 +54,64 @@ public class UserService {
 
     public UserResponseDTO createUser(UserRequestDTO request) {
 
-        User user = new User();
-        user.setFullName(request.getFullName());
-        user.setEmail(request.getEmail());
-        user.setPassword(passwordEncoder.encode(request.getPassword()));
-        user.setRole(request.getRole());
+        validateEmailNotExists(request.getEmail());
 
-        User savedUser = userRepository.save(user);
+        User user = buildUser(
+                request.getFullName(),
+                request.getEmail(),
+                request.getPassword(),
+                request.getRole()
+        );
 
-        return mapToResponse(savedUser);
+        return mapToResponse(userRepository.save(user));
     }
 
     public List<UserResponseDTO> getAllUsers() {
         return userRepository.findAll()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserResponseDTO getUserById(Long id) {
+
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
         return mapToResponse(user);
+    }
+
+    private User buildUser(String name, String email, String password, UserRole role) {
+
+        User user = new User();
+
+        user.setFullName(name.trim());
+        user.setEmail(email.trim().toLowerCase());
+        user.setPassword(passwordEncoder.encode(password));
+        user.setRole(role);
+
+        return user;
+    }
+
+    private void validateEmailNotExists(String email) {
+
+        String normalizedEmail = email.trim().toLowerCase();
+
+        if (userRepository.findByEmail(normalizedEmail).isPresent()) {
+            throw new RuntimeException("Email already registered");
+        }
+    }
+
+    private RegisterResponseDTO mapToRegisterResponse(User user) {
+
+        RegisterResponseDTO response = new RegisterResponseDTO();
+
+        response.setId(user.getId());
+        response.setFullName(user.getFullName());
+        response.setEmail(user.getEmail());
+        response.setRole(user.getRole().name());
+
+        return response;
     }
 
     private UserResponseDTO mapToResponse(User user) {
